# langchain_academy

./: .gitignore  pyproject.toml  requirements.txt
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  deployment.ipynb  router.ipynb  simple-graph.ipynb
module-1/studio/: agent.py  router.py
module-2/: chatbot-external-memory.ipynb  chatbot-summarization.ipynb  multiple-schemas.ipynb  state-reducers.ipynb  state-schema.ipynb  trim-filter-messages.ipynb
module-2/studio/: .env.example  chatbot.py
module-3/: 0_streaming-interruption.ipynb  1_breakpoints.ipynb  2_edit-state-human-feedback.ipynb  4_time-travel.ipynb  all_state_0.json  all_state_1.json  all_state_2.json  all_state_3.json  all_state_4.json  breakpoints.ipynb  dynamic-breakpoints.ipynb  edit-state-human-feedback.ipynb  event_format.json  fork_all_state_0.json  fork_all_state_1.json  fork_all_state_2.json  fork_all_state_3.json  state_snapshot.json  streaming-interruption.ipynb  time-travel.ipynb  updates_chunk.json
module-3/studio/: agent.py  edit-state-human-feedback.py  langgraph.json
module-4/: 0_parallelization.ipynb  1_sub-graph.ipynb  2_map-reduce.ipynb  3_research-assistant.ipynb  4_test.ipynb  TavilySearch.json  WikiResponse.json  map-reduce.ipynb  parallelization.ipynb  research-assistant.ipynb
module-5/: 0_memory_store.ipynb  1_memoryschema_profile.ipynb  3_memory_agent.ipynb  memory_agent.ipynb  memory_store.ipynb  memoryschema_collection.ipynb  memoryschema_profile.ipynb  trustcall_extractor_result.json  trustcall_extractor_result_2.json
(+14 files in other folders)
